--- a/templates/xhtml-templates/10.4.1-content.html
+++ b/templates/xhtml-templates/10.4.1-content.html
@@ -476,14 +476,22 @@
 								<li><a href="#">Why Endurance Nutrition?</a></li>
 							</ul>
 						</div>
+						
+					<p>&nbsp;</p>
+					<div id="content-iframe-2">
+						<iframe src="http://www.w3.org/TR/2011/WD-html5-20110525/the-iframe-element.html#the-iframe-element" width="245" scrolling="no"></iframe>
+					</div>
+						
 					</div>
 					<div class="clear"></div>
 					<!-- form builder -->
 					<div id="form-builder">
 						<h3>Form name (Form builder area)</h3>
 						<p class="grey">*Required fields are marked with an asterisk</p>
+						<div class="clear"></div>
 						<form action="#" method="post" name="my-form" target="_blank">
 							<p class="error">Please complete the field below</p>
+							<div class="clear"></div>
 							<label for="required-field">Mandatory field example*</label>
 							<input id="required-field" type="text" name="required-field" size="50" />
 							<div class="clear"></div>
@@ -494,6 +502,7 @@
 							<input id="check-box" name="check-box" type="checkbox" checked="checked" />
 							<div class="clear"></div>
 							<p class="error">Please complete the field below</p>
+							<div class="clear"></div>
 							<label for="example-dd">Mandatory select example*</label>
 							<select id="example-dd" name="my-dd">
 								<option value="option-1">Option 1</option>
@@ -515,7 +524,7 @@
 					
 					<!-- iframe content -->
 					<div id="content-iframe">
-						<iframe src="http://www.scienceinsport.com/" width="934" scrolling="no"></iframe>
+						<iframe src="http://www.w3.org/TR/2011/WD-html5-20110525/the-iframe-element.html#the-iframe-element" width="934" scrolling="no"></iframe>
 					</div>
 				</div>
 			</div>
