--- a/templates/xhtml-templates/10.4.2-contact-us.html
+++ b/templates/xhtml-templates/10.4.2-contact-us.html
@@ -453,9 +453,10 @@
 							<a href="#"><img src="../img/ui/twitter-wysiwyg.png" alt="image" title="image" height="29" width="29" /></a> <a href="#"><img src="../img/ui/facebook-wysiwyg.png" alt="image" title="image" height="29" width="29" /></a> <a href="#"><img src="../img/ui/youtube-wysiwyg.png" alt="image" title="image" height="29" width="29" /></a> </div>
 						<div class="wysiwyg-area contact-form"> 
 							<!-- form builder -->
-							<div id="form-builder">
+							<div id="form-builder-narrow">
 								<h3></h3>
 								<p class="grey">*Required fields are marked with an asterisk</p>
+								<div class="clear"></div>
 								<form action="#" method="post" name="my-form" target="_blank">
 									<p class="error">Please complete the field below</p>
 									<label for="user-name">Name<span class="red">*</span></label>
