--- a/templates/xhtml-templates/10.4.4-faq.html
+++ b/templates/xhtml-templates/10.4.4-faq.html
@@ -433,6 +433,8 @@
 						<div class="faq-content-footer">
 							<h4>Didn’t find your question here? What would you like to know?</h4>
 							<form method="post" class="question-form" action="#">
+								<span class="error">Please enter your question into the field below</span>
+								<div class="clear"></div>
 								<input type="text" id="question-input" size="80" class="question-input" value="Send us your question and if others are asking too we’ll add it to the FAQ..." />
 								<button class="yellow-btn">Send</button>
 							</form>
