--- a/templates/xhtml-templates/10.4.5-unsubscribe.html
+++ b/templates/xhtml-templates/10.4.5-unsubscribe.html
@@ -402,7 +402,7 @@
 					<p class="error">Please enter a valid email address</p>
 					<div class="clear"></div>
 					<label for="email-remove-input">Email address*</label>
-					<input type="text" id="email-remove-input" size="40" class="question-input" value="" />
+					<input type="text" class="question-input" id="email-remove-input" value="" size="40" maxlength="128" />
 					<button class="yellow-btn">Continue</button>
 				</form>
 			</div>
