--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -326,7 +326,7 @@ div:first-child+div>div.check-item-image{margin-top:10px}
 #q-a-form-content textarea{background-color:#ddd;border:1px solid #cacaca;width:60%;margin-bottom:15px}
 #content-container{overflow:hidden}
 #content-container{margin:0 45px 45px 45px}
-#content-container #add-this-component{height:32px;float:right;margin-top:15px;margin-bottom:15px;width:184px}
+#content-container #add-this-component{height:32px;float:right;margin-top:40px;margin-bottom:15px;width:184px}
 #content-product-list{width:242px;float:left}
 #content-product-list .product-display-box-a{margin-bottom:30px;padding:15px 0 35px 0}
 #content-template-wysiwyg{width:648px;float:left;padding-right:44px}
@@ -336,11 +336,13 @@ div:first-child+div>div.check-item-image{margin-top:10px}
 #related-articles a{color:#9e9e9e;font-size:14px}
 #related-articles ul{list-style-type:none;margin:5px 0 0 -40px}
 #form-builder label{line-height:31px;height:31px;display:block;float:left;margin-bottom:15px;clear:both;width:220px;font-size:12px}
-#form-builder p{font-size:12px;float:left;clear:both}
-#form-builder input{height:31px;line-height:31px;background-color:#ddd;border:1px solid #cacaca;padding:2px;float:left;margin-bottom:15px;display:block}
+#form-builder-narrow label{line-height:31px;height:31px;display:block;float:left;margin-bottom:15px;clear:both;width:100px;font-size:12px}
+#form-builder p, #form-builder-narrow p{font-size:12px;float:left;clear:both}
+#form-builder input, #form-builder-narrow input{height:31px;line-height:31px;background-color:#ddd;border:1px solid #cacaca;padding:2px;float:left;margin-bottom:15px;display:block}
 #form-builder textarea{background-color:#ddd;border:1px solid #cacaca;float:left;width:60%;margin-bottom:15px}
-#form-builder select{float:left;background:transparent;border:0;height:30px;border-radius:0;padding:5px;margin-left:2px;background:#ddd url(../img/ui/dropdown-arrow.png) no-repeat -1px 0;-webkit-appearance:none;-moz-appearance:none;text-indent:.01px;text-overflow:"";width:144px;background-position:-126px 0;margin-left:0;margin-bottom:20px;margin-right:15px;padding-right:10px}
-#form-builder button{background:transparent url(../img/ui/button.png) 0 14px no-repeat;height:62px;top:1px;font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif;width:157px;margin-left:-5px;text-align:left;padding-left:12px;cursor:pointer;border:0;position:relative}
+#form-builder-narrow textarea{background-color:#ddd;border:1px solid #cacaca;float:left;margin-bottom:15px; width:300px}
+#form-builder select, #form-builder-narrow select{float:left;background:transparent;border:0;height:30px;border-radius:0;padding:5px;margin-left:2px;background:#ddd url(../img/ui/dropdown-arrow.png) no-repeat -1px 0;-webkit-appearance:none;-moz-appearance:none;text-indent:.01px;text-overflow:"";width:144px;background-position:-126px 0;margin-left:0;margin-bottom:20px;margin-right:15px;padding-right:10px}
+#form-builder button, #form-builder-narrow button{background:transparent url(../img/ui/button.png) 0 14px no-repeat;height:62px;top:1px;font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif;width:157px;margin-left:-5px;text-align:left;padding-left:12px;cursor:pointer;border:0;position:relative}
 #form-builder input[type=checkbox],#form-builder input[type=radio]{background-color:transparent;border:0}
 #content-iframe iframe{width:100%;margin-top:30px}
 .contact-us{margin:45px;overflow:hidden}
@@ -768,7 +770,12 @@ ul.referred-friend-row li{border-bottom:dotted 1px #9e9e9e;padding:20px 0;margin
 #members-checkout-delivery label{width:232px;clear:none}
 #dup-menu{margin-top:80px}
 #my-description{line-height:23px; margin-bottom:80px; margin-right:30px}
+#form-builder p.error{padding:3px 0; margin:0 0 0 220px;}
+#form-builder-narrow p.error{padding:3px 0; margin:0 0 0 0; color:#f05;}
+.faq-content-footer span.error{padding:3px 0; margin:20px 0 0 0; line-height:0}
+
 @-moz-document url-prefix(){#search-results-content .yellow-btn{top:2px}}
-html[data-useragent*='MSIE 10.0'] select{background:#ddd none no-repeat -100px 0 !important}
-html[data-useragent*='MSIE 10.0'] input[type="checkbox"]{background-color:transparent !important;border:0 !important}
-html[data-useragent*='MSIE 10.0'] input[type="radio"]{background-position: 55px -7px!important}
+html[data-useragent*='MSIE 10.0'] * select{background:#ddd none no-repeat -100px 0 !important}
+html[data-useragent*='MSIE 10.0'] * input[type="checkbox"]{background-color:transparent !important;border:0 !important}
+html[data-useragent*='MSIE 10.0'] * input[type="radio"]{background-position: 55px 0px!important}
+/*js this...*/
