getting overlay to work

--- a/templates/xhtml-templates/10.1.1-home.html
+++ b/templates/xhtml-templates/10.1.1-home.html
@@ -606,7 +606,7 @@
 							<option value="sel1-3">50g (1 serving)</option>
 							<option value="sel1-4">1.6kg (20 servings)</option>
 						</select>
-						<button class="yellow-btn">Add To Basket</button>
+						<button class="yellow-btn add-button">Add To Basket</button>
 					</div>
 				</form>
 			</div>
