--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -135,20 +135,37 @@ div:first-child+div>div.check-item-image{margin-top:10px}
 .text-button{border:0;background:0}
 .black-button{background:#000;color:#fff;font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif;border:0;height:31px;padding:0 20px}
 .payment-cards-box{float:left;clear:both;margin:50px 0 0 135px}
-#qb-overlay{background-image:url(../img/ui/yt-bg.png);height:100%;width:100%;position:fixed;top:0;left:0;display:none}
-#qb-outer-frame{background-color:#fff;height:318px;width:594px;top:0;left:0;right:0;bottom:0;position:absolute;margin:auto}
+#qb-overlay, #ab-overlay{background-image:url(../img/ui/yt-bg.png);height:100%;width:100%;position:fixed;top:0;left:0; display:none}
+#qb-outer-frame, #qb-outer-frame{background-color:#fff;height:318px;width:594px;top:0;left:0;right:0;bottom:0;position:absolute;margin:auto}
+#ab-outer-frame, #ab-outer-frame{background-color:#fff;height:445px;width:650px;top:0;left:0;right:0;bottom:0;position:absolute;margin:auto}
 #qb-inner-frame{margin:15px}
-#qb-overlay h2,#qb-overlay p{margin:0;font-weight:normal}
-#qb-overlay h3{font-family:HelveticaNeueLT-Roman,Helvetica,Arial,sans-serif;color:#9e9e9e;margin:0;font-weight:normal}
+#qb-overlay h2,#qb-overlay p, #ab-overlay h2,#ab-overlay p{margin:0;font-weight:normal}
+#qb-overlay h3, #ab-overlay h3{font-family:HelveticaNeueLT-Roman,Helvetica,Arial,sans-serif;color:#9e9e9e;margin:0;font-weight:normal}
+#ab-overlay h3{font-size:14px; margin-top:10px}
 #qb-overlay iframe{bottom:15px;position:absolute}
-#qb-header{margin:0 15px}
+#qb-header, #ab-header{margin:15px}
 #qb-dd-product-selectors select{float:left;background:transparent;border:0;height:30px;border-radius:0;padding:5px;margin-left:2px;background:#ddd url(../img/ui/dropdown-arrow.png) no-repeat -1px 0;-webkit-appearance:none;-moz-appearance:none;text-indent:.01px;text-overflow:"";width:144px;background-position:-126px 0;margin-left:0;margin-bottom:20px;margin-right:15px;padding-right:10px}
 #qb-dd-product-selectors .yellow-btn{background:transparent url(../img/ui/button.png) 0 14px no-repeat;height:62px;top:-14px;font-family:HelveticaNeueLT-Bold,Helvetica,Arial,sans-serif;width:157px;margin-left:-5px;text-align:left;padding-left:12px;cursor:pointer;border:0;position:relative}
-.qb-form{padding:45px 15px}
+.qb-form{padding:45px 15px;}
+.ab-form{padding:45px; background-image:url(../img/ui/ad-space-gradient.png); background-repeat:repeat-x; background-color:#E9E9E9; border-bottom:1px #ccc solid; }
+.ab-form .check-amounts{font-size:14px}
+.ab-header{font-size:14px}
+#ab-overlay{display:block}
+.ab-table th{font-size:14px; padding:0 0 10px 20px; }
+.ab-table td{font-size:14px; padding:0 0 0 20px;}
+.border-top{border-top:1px #ccc solid}
+.ab-table ul{margin-left:-40px}
+.ab-table{border-bottom:1px #ccc solid}
+.ab-buttons{overflow:hidden}
+.continue-shopping{float:right}
+.view_basket{float:left}
+
+
 #rotating-image-container,.advert-zone-full-width,._640-15-340,._410-15-569,._569-15-410,._411-15-568{width:994px;overflow-y:hidden;position:relative}
 .left{float:left}
 ._15{width:15px;height:15px}
 ._184{width:184px}
+._205{width:205px}
 ._339{width:339px}
 ._640{width:640px}
 ._568{width:568px}
@@ -773,6 +790,7 @@ ul.referred-friend-row li{border-bottom:dotted 1px #9e9e9e;padding:20px 0;margin
 #form-builder p.error{padding:3px 0; margin:0 0 0 220px;}
 #form-builder-narrow p.error{padding:3px 0; margin:0 0 0 0; color:#f05;}
 .faq-content-footer span.error{padding:3px 0; margin:20px 0 0 0; line-height:0}
+#q-a-form-content p.error{padding:3px 0; margin:0 0 0 125px; color:#f05;}
 
 @-moz-document url-prefix(){#search-results-content .yellow-btn{top:2px}}
 html[data-useragent*='MSIE 10.0'] * select{background:#ddd none no-repeat -100px 0 !important}
