--- a/templates/css/ie-7.css
+++ b/templates/css/ie-7.css
@@ -11,6 +11,7 @@
 #my-account-register-form p{float:none!important}
 .history-list ul{margin-left:0!important}
 .manage-address-wrapper UL{float:none!important;margin-left:0!important}
+.ab-form UL{float:none!important;margin-left:0!important}
 #account-manage-address .bottom-border{height:120px}
 #account-update .yellow-button{position:relative!important}
 #checkout-login-signup input{width:215px}
