--- a/templates/xhtml-templates/10.2.6-members-checkout-options.html
+++ b/templates/xhtml-templates/10.2.6-members-checkout-options.html
@@ -10,6 +10,7 @@
 		<!--[if IE]>
 		<link rel="stylesheet" type="text/css" href="../css/ie.css" media="screen" />
 		<![endif]-->
+		<script src="../js/jquery-1.10.2.min.js" type="text/javascript"></script>
 	</head>
 	<body>
 		<div id="container">
@@ -35,6 +36,7 @@
 						<!--overlay for adding an address -->
 						<div id="add-address-overlay">
 							<div class="add-delivery-address">
+								<div class="add-addr-close"><img src="../img/ui/close_btn.png" alt="Close" title="Close" height="20" width="20" /></div>
 								<h3>Add A New Delivery Address</h3>
 								<p class="grey">*Required fields are marked with an asterisk</p>
 								<p>Please enter your delivery address</p>
@@ -341,6 +343,7 @@
 						</div>
 						<div id="edit-address-overlay">
 							<div class="edit-delivery-address">
+								<div class="edit-addr-close"><img src="../img/ui/close_btn.png" alt="Close" title="Close" height="20" width="20" /></div>
 								<h3>Edit Delivery Address</h3>
 								<p class="grey">*Required fields are marked with an asterisk</p>
 								<p class="error">Please supply more details where indicated below.</p>
@@ -669,8 +672,8 @@
 											United Kingdom
 										</p>
 										<div class="clear"></div>
-										<a href="#" class="text-button">Edit address</a>
-										<button class="text-button">Add new address</button>
+										<a id="edit-addr" href="#" class="text-button">Edit address</a>
+										<button id="add-addr" type="submit" class="text-button">Add new address</button>
 									</div>
 								</div>
 								<div class="mem-check-delivery-type">
@@ -712,5 +715,26 @@
 			<!--  #wrapper -->
 		</div>
 		<!-- #container -->
+		<script type="text/javascript">
+		/* Add/edit address layers*/
+		
+		//show
+		jQuery('#add-addr').click(function(e){
+			jQuery('#add-address-overlay').show();
+			jQuery('#delivery-info-form').hide();
+			e.preventDefault();
+		});
+		jQuery('#edit-addr').click(function(e){
+			jQuery('#edit-address-overlay').show();
+			jQuery('#delivery-info-form').hide();
+		});
+
+		
+		//hide
+		jQuery('.add-addr-close, .edit-addr-close').click(function(){
+			jQuery('#add-address-overlay, #edit-address-overlay').hide();
+			jQuery('#delivery-info-form').show();
+		});
+		</script>
 	</body>
 </html>
