--- a/templates/xhtml-templates/10.3.3-my-account-register.html
+++ b/templates/xhtml-templates/10.3.3-my-account-register.html
@@ -427,7 +427,7 @@
 								<div class="clear"></div>
 								<p class="error"> Please enter a first name</p>
 								<label for="account-register-first-name" >First Name*</label>
-								 
+								 <input name="register-first-name" type="text" id="account-register-first-name" size="51" maxlength="30" />
 								<div class="clear"></div>
 								<p class="error"> Please enter a last name</p>
 								<label for="account-register-last-name">Last Name*</label>
@@ -739,8 +739,7 @@
 								<label for="account-register-town">Town/City*</label>
 								<input name="register-town" type="text" id="account-register-town" size="51" maxlength="50" />
 								<div class="clear"></div>
-								<p class="error">Please enter a county/state</p>
-								<label for="account-register-address-county">County*</label>
+								<label for="account-register-address-county">County</label>
 								<input name="register-address-county" type="text" id="account-register-address-county" size="51" maxlength="50" />
 								<div class="clear"></div>
 								<p class="error">Please type in a postcode/zip code</p>
