--- a/templates/xhtml-templates/10.3.6-my-account-view-order.html
+++ b/templates/xhtml-templates/10.3.6-my-account-view-order.html
@@ -447,7 +447,7 @@
 								</div>
 								<div class="check-item-price"> <span class="grey clear"><span class="pound">&pound;</span><span class="bold">29.99</span></span> </div>
 								<p class="check-amounts">1 </p>
-								<div class="check-final-price bold"> <span class="pound">&pound;</span><span class="bold">55.80</span> </div>
+								<div class="check-final-price bold"> <span class="pound">&pound;</span><span class="bold">55.80</span></div>
 							</div>
 							<!-- end check item row -->
 							
@@ -460,10 +460,9 @@
 										<li class="">Flavour: <span class="grey">Strawberry</span></li>
 									</ul>
 								</div>
-								<div class="check-item-price"> <span class="grey clear"><del><span class="pound">&pound;</span><span class="bold">29.99</span></del></span> <br />
-									<span class="grey clear"><span class="pound">&pound;</span><span class="bold">0.00</span></span> </div>
+								<div class="check-item-price"> <span class="grey clear"><span class="pound">&pound;</span><span class="bold">29.99</span></span> <br /></div>
 								<p class="check-amounts">1 </p>
-								<div class="check-final-price bold"> <span class="pound">&pound;</span><span class="bold">0.00</span> </div>
+								<div class="check-final-price bold"><del><span class="pound">&pound;</span><span class="bold">29.99</span></del></span><br /><span class="pound">&pound;</span><span class="bold">14.99</span></div>
 							</div>
 							<!-- end check item row -->
 							
@@ -476,10 +475,10 @@
 										<li class="">Flavour: <span class="grey">Strawberry</span></li>
 									</ul>
 								</div>
-								<div class="check-item-price"> <span class="grey clear"><del><span class="pound">&pound;</span><span class="bold">29.99</span></del></span> <br />
-									<span class="grey clear"><span class="pound">&pound;</span><span class="bold">15.49</span></span> </div>
+									<div class="check-item-price"> <span class="grey clear"><span class="pound">&pound;</span><span class="bold">29.99</span></span> <br /></div>
 								<p class="check-amounts">1 </p>
-								<div class="check-final-price bold"> <span class="pound">&pound;</span><span class="bold">15.49</span> </div>
+								<div class="check-final-price bold"><del><span class="pound">&pound;</span><span class="bold">29.99</span></del></span><br />
+								<span class="pound">&pound;</span><span class="bold">0.00</span></div>
 							</div>
 							<!-- end check item row -->
 							
