--- a/templates/xhtml-templates/10.3.7-my-account-send-return-req.html
+++ b/templates/xhtml-templates/10.3.7-my-account-send-return-req.html
@@ -423,6 +423,7 @@
 						<p><span class="bold">Order Status:</span> Order Dispatched</p>
 						<form id="returns-form" action="#">
 							<p class="error">One or more fields have been missed or completed incorrectly. Please complete or amend appropriately.</p>
+							<div class="clear"></div>
 							<p class="error"> Please select at least one product to return</p>
 							<ul class="row-title return-items-title">
 								<li>Product Name</li>
