--- a/templates/xhtml-templates/10.3.7.5-my-account-send-return-req-thank-you.html
+++ b/templates/xhtml-templates/10.3.7.5-my-account-send-return-req-thank-you.html
@@ -392,69 +392,55 @@
 		</div>
 		<!-- #header -->
 		
-		<div>
-			<div id="content" class="account-pages">
-				<div id="ad-title-space">
-					<h1 class="check-page-title"> My Account </h1>
-				</div>
-				<div id="grey-bg-wrapper">
-					<div id="my-account-login-signup">
-						<div id="my-account-login" class="checkout-login">
-							<form class="checkout-login" method="post" action="#">
-								<h2>Existing Customer</h2>
-								<div class="error">Sorry, some of your details were incorrect.  Please check your email address and password and try again.</div>
-								<p>Please enter your existing email and password.</p>
-								<p class="error">Please enter a valid email address</p>
-								<label for="login-email">Email address: </label>
-								<input name="checkout-login-email" type="text" id="login-email" maxlength="128" />
-								<div class="clear"></div>
-								<p class="error">Please enter a password</p>
-								<label for="login-password">Password:</label>
-								<input name="pwd" type="password" id="login-password" maxlength="64" />
-								<div class="clear"></div>
-								<button name="login-submit" type="submit"class="yellow-button">Sign In</button>
-								<p class="forgot-password"><a href="#" class="link text-button">Forgotten Password?</a></p>
-							</form>
-						</div>
-						<div class="new-and-guest-wrapper">
-							<form id="my-account-signup" class="checkout-signup" method="post" action="#">
-								<h2>New Customer</h2>
-								<div class="error">The email address entered is already registered.
-									If you have forgotten your password please use the forgotten password link.</div>
-								<p>Please enter your email address.</p>
-								<p class="error">Please enter a valid email address</p>
-								<label for="new-customer-email">Email address:</label>
-								<input name="checkout-new-customer-email" type="text"  id="new-customer-email" maxlength="128" />
-								<label style="width:100%">&nbsp;</label>
-								<button class="yellow-button"> Continue </button>
-							</form>
-						</div>
+		<div id="content" class="account-pages">
+			<div id="ad-title-space">
+				<h1 class="check-page-title"> My Account </h1>
+			</div>
+			<div id="grey-bg-wrapper">
+				<div id="account-return" class="account-retur">
+					<div id="account-return-menu"class="left">
+						<ul class="my-account-navigation">
+							<li><a href="#" title="View your order history"><span class="near-black">View your order history</span></a></li>
+							<li><a href="#" title="View your wish list">View your wish list</a></li>
+							<li><a href="#" title="Update your details">Update your details</a></li>
+							<li><a href="#" title="Manage your delivery Addresses">Manage your delivery Addresses</a></li>
+							<li><a href="#" title="Refer a friend">Refer a friend</a></li>
+						</ul>
 					</div>
-				</div>
-				<!-- end of grey bg wrapper-->
-				<div class="_410-15-569 social">
-					<div class="_410 left">
-						<div class="adzone lineheight-fix">
-							<iframe height="150px" width="410px" scrolling="no" frameborder="0" src="http://54.247.98.191/SiS-Tweets/twitter-feed-parser.php/"></iframe>
-						</div>
-						<div class="h-divider"></div>
-						<div class="_410 adzone facebook-box">
-							<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.scienceinsport.com%2F&amp;width=200&amp;height=40&amp;colorscheme=light&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;send=false&amp;appId=171140663088738" allowtransparency="true" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:200px; height:40px;"></iframe>
-						</div>
+					<!-- end of left column--> 
+
+					<div id="account-return-transaction" class="float-right">
+						<h2>Create a Return</h2>
+						<p> Thank you. A member of staff will contact you soon to discuss
+your request.</p>
+						
 					</div>
-					<div class="_15 left"></div>
-					<div class="_569 adzone text-overlaid left"> <a href="#" title="Advert Zone"><img src="../img/dummy/ad-568x315px.jpg" height="315" width="569" alt="Advert Zone" /></a>
-						<div class="ad-text">
-							<h2><a href="#" title="Advert Zone"><span class="yellow">Shop SiS</span></a></h2>
-							<h3><span class="white">Leaders in Endurance Nutrition</span></h3>
-							<h4><span class="white">Explore our full range to find the product that best suits your individual nutritional needs.</span></h4>
-							<a class="cta-btn _184" href="#" title="CTA"><span>Shop Now!</span></a> </div>
+					<!-- end of right column --> 
+				</div>
+				<!-- end of #account-order --> 
+			</div>
+			<!-- end of grey bg wrapper-->
+			<div class="_410-15-569 social">
+				<div class="_410 left">
+					<div class="adzone lineheight-fix">
+						<iframe height="150px" width="410px" scrolling="no" frameborder="0" src="http://54.247.98.191/SiS-Tweets/twitter-feed-parser.php/"></iframe>
 					</div>
 					<div class="h-divider"></div>
+					<div class="_410 adzone facebook-box">
+						<iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fwww.scienceinsport.com%2F&amp;width=200&amp;height=40&amp;colorscheme=light&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;send=false&amp;appId=171140663088738" allowtransparency="true" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:200px; height:40px;"></iframe>
+					</div>
 				</div>
+				<div class="_15 left"></div>
+				<div class="_569 adzone text-overlaid left"> <a href="#" title="Advert Zone"><img src="../img/dummy/ad-568x315px.jpg" height="315" width="569" alt="Advert Zone" /></a>
+					<div class="ad-text">
+						<h2><a href="#" title="Advert Zone"><span class="yellow">Shop SiS</span></a></h2>
+						<h3><span class="white">Leaders in Endurance Nutrition</span></h3>
+						<h4><span class="white">Explore our full range to find the product that best suits your individual nutritional needs.</span></h4>
+						<a class="cta-btn _184" href="#" title="CTA"><span>Shop Now!</span></a> </div>
+				</div>
+				<div class="h-divider"></div>
 			</div>
 			<!-- #content --> 
-			
 		</div>
 		<!-- #content --> 
 		
@@ -510,6 +496,7 @@
 		<a target="blank" href="https://twitter.com/ScienceinSport" class="social-icon twitter"></a> <a target="blank" href="https://www.facebook.com/ScienceInSportOfficial" class="social-icon facebook"></a> <a target="blank" href="http://www.youtube.com/user/scienceinsport/" class="social-icon youtube"></a> </div>
 </div>
 <!-- #footer --> 
+
 
 </body>
 </html>
