--- a/templates/xhtml-templates/10.3.8-my-account-wishlist.html
+++ b/templates/xhtml-templates/10.3.8-my-account-wishlist.html
@@ -412,8 +412,12 @@
 						<div>
 							<h2>My Wishlist</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nulla eros, vulputate eget tincidunt ac, sodales quis sapien. Cras pulvinar felis nec ligula sollicitudin quis imperdiet urna pretium. Maecenas ut mi ac nunc adipiscing ornare ut id purus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin facilisis egestas tortor, nec sollicitudin turpis varius in. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin congue tortor ac justo congue eget lacinia elit adipiscing. Mauris pharetra, lorem sed pharetra dictum.</p>
+							<h3 class="red">You have not added any products to your wishlist</h3>
+							<h3 class=" dark-gray louder">Email wish list to a friend</h3>
+							<h3 class="red">Your wish list has been sent to your friend</h3>
 							<form id="wishlist-to-friend" action="#">
-								<label for="friends-email">Friend's email address</label>
+								<p class="error">Please enter a valid email address</p>
+								<label for="friends-email">Friend's email address*</label>
 								<input id="friends-email" type="text" />
 								<div class="clear"></div>
 								<label for="wishlist-message">Message</label>
