--- a/templates/css/main.css
+++ b/templates/css/main.css
@@ -696,7 +696,7 @@ p.check-amounts{text-align:center}
 #update-details select,#update-newsletter select,#update-password select{width:153px;background-position:top right}
 #update-details input[type="radio"],#update-newsletter input[type="radio"],#update-password input[type="radio"]{width:12px;background-color:transparent;border:0}
 #update-details label{width:105px}
-#account-update form{height:476px; position:relative}
+#account-update form{height:500px; position:relative}
 #account-update p{font-size:12px}
 #update-password label{width:110px;padding-left:16px}
 #update-password p{padding-right:15px}
@@ -748,8 +748,8 @@ p.check-amounts{text-align:center}
 .add-address-form-your-details{float:left;clear:both}
 .add-address-form-your-details button{margin-top:0}
 .add-address-form-your-details button.black-button{margin-top:14px}
-.address-column-right{overflow:auto;float:left;margin-top:46px; width:396px}
-.address-column-left{overflow:auto;clear:both;float:left;margin-right:30px;border-right:dotted 1px #9e9e9e;padding-right:30px;height:455px; width:396px}
+.address-column-right{overflow:auto;float:right;margin-top:46px; width:396px}
+.address-column-left{overflow:auto;clear:both;float:left;margin-right:30px;border-right:dotted 1px #9e9e9e;padding-right:70px;height:455px; width:396px}
 .delivery-links{width:264px}
 .refer-friends-container p.grey {line-height:20px}
 .refer-friends-container p.error{margin:0 0 0 190px; padding:3px 0}
@@ -792,6 +792,8 @@ ul.referred-friend-row li{border-bottom:dotted 1px #9e9e9e;padding:20px 0;margin
 #q-a-form-content p.error{padding:3px 0; margin:0 0 0 125px; color:#f05;}
 #promocode-form p.error{margin:0}
 #forgot-pass-form p.error{margin:0}
+#wishlist-to-friend p.error{margin:0 0 0 154px}
+.louder{text-transform:uppercase}
 
 @-moz-document url-prefix(){#search-results-content .yellow-btn{top:2px}}
 html[data-useragent*='MSIE 10.0'] * select{background:#ddd none no-repeat -100px 0 !important}
